# diffusion2d

./: .gitignore  README.md  diffusion2d.py  output.py  pyproject.toml
tucciafo_diffusion2d/: __init__.py  diffusion2d.py  output.py
